--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
       <!-- Display success message below -->
     </section>
     <div class="popup" id="myForm">
-      <form action="#" class="form-container">
+      <form action="#" name="loginForm" class="form-container" id="" onsubmit="return validate()">
         <h1>Login</h1>
-        <input type="text" class="username form-control" placeholder="E-mail" name="email" required>
-        <input type="password" class="password form-control" placeholder="Password" name="psw" required>
-        <input  type="checkbox" name="terms">
-        <span class="checkboxtext">I agree to terms & conditions.</span>
-        <button type="submit" class="btn_submit">SUBMIT</button>
+        <input type="text" id="email" class="form-control" placeholder="E-mail" name="email">
+        <input type="password" id="password" class="form-control" placeholder="Password" name="psw">
+        <input type="checkbox" id="agree_check" name="terms" required>
+        <span class="checkboxtext" required>I agree to terms & conditions.</span>
+        <button type="submit" id="submit" class="btn_submit">SUBMIT</button>
         <div data-dismiss="modal" class="close" onclick="closeForm()">&#10010;</div>
       </form>
     </div>
